--- a/package.json
+++ b/package.json
@@ -119,8 +119,7 @@
     "turndown": "^7.2.0",
     "typescript": "4.9.4",
     "uuid": "^9.0.0",
-    "validator": "^13.7.0",
-    "xss": "^1.0.15"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
